kubernetes/ufoo/50-payload/nocodb/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nocodb-http
  namespace: nocodb
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nocodb.agrrh.com`) || Host(`nocodb.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: traefik
      services:
        - kind: Service
          name: nocodb
          namespace: nocodb
          port: 8080
